# alloy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  justfile  phase_verification.txt
docs/: claude-desktop-system-prompt.md  cli.md  configuration.md  getting-started.md  gtd.md  ontology.md  tools.md  usage.md
src/: backup.rs  cache.rs  coordinator.rs  error.rs  lib.rs  main.rs  metrics.rs  utils.rs  webhooks.rs
src/acl/: middleware.rs  mod.rs  query_filter.rs  resolver.rs  storage.rs
src/api/: handlers.rs  mod.rs  rest.rs
src/auth/: middleware.rs  mod.rs
src/calendar/: events.rs  extraction.rs  mod.rs  query.rs  types.rs
src/cli/: commands.rs  local.rs  mod.rs  output.rs  remote.rs  types.rs
src/config/: mod.rs  settings.rs
src/embedding/: api.rs  batch.rs  local.rs  mod.rs  traits.rs
src/gtd/: attention.rs  commitments.rs  dependencies.rs  horizons.rs  inbox.rs  mod.rs  projects.rs  recommend.rs  review.rs  someday.rs  tasks.rs  types.rs  waiting.rs
src/knowledge/: mod.rs  query.rs  types.rs
src/mcp/: calendar_tools.rs  gtd_simple_tools.rs  gtd_tools.rs  knowledge_tools.rs  mod.rs  query_tools.rs  responses.rs  server.rs  tools.rs  transport.rs
src/ontology/: mod.rs  store.rs  types.rs
src/ontology/extraction/: actions.rs  mod.rs  ner.rs  processor.rs  relations.rs  temporal.rs
src/processing/: chunker.rs  dedup.rs  document.rs  image.rs  mod.rs  registry.rs  text.rs  traits.rs
src/query/: classifier.rs  executor.rs  mod.rs  types.rs
src/search/: clustering.rs  clustering_cache.rs  clustering_viz.rs  cross_encoder.rs  expansion.rs  fusion.rs  hybrid.rs  mod.rs  reranker.rs
src/sources/: change_detection.rs  local.rs  mod.rs  s3.rs  traits.rs
src/storage/: embedded.rs  lance_backend.rs  mod.rs  qdrant_backend.rs  tantivy_backend.rs  traits.rs
src/tls/: cert_manager.rs  mod.rs  trust_store.rs
src/versioning/: diff.rs  manager.rs  mod.rs  retention.rs  storage.rs
src/web/: handlers.rs  mod.rs  static_files.rs
tests/: integration.rs
tests/integration/: test_coordinator.rs  test_mcp_server.rs  test_pipeline.rs
